Restructure project to subprojects and implement proper modular setups and tests.