@@ -1,4 +1,7 @@
+import net.minecraftforge.gradleutils.PomUtils
+
 plugins {
+    id 'org.cadixdev.licenser' version '0.6.1'
     id 'java-library'
     id 'eclipse'
     id 'net.minecraftforge.gradleutils' version '2.+'
@@ -11,134 +14,55 @@ java {
     withSourcesJar()
 }
 
-
 group = 'net.minecraftforge'
-version = gradleutils.getTagOffsetVersion()
+version = gradleutils.tagOffsetVersion
 logger.lifecycle('Version: ' + version)
 
-sourceSets {
-    jmh
-    testJars
-}
-
 repositories {
+    mavenCentral()
+    maven gradleutils.forgeMaven
     mavenLocal()
-    maven {
-        name = 'forge'
-        url = 'https://maven.minecraftforge.net/'
-    }
 }
-
 
 dependencies {
-    api("org.ow2.asm:asm:${asmVersion}")
-    api("org.ow2.asm:asm-tree:${asmVersion}")
-    api("org.ow2.asm:asm-commons:${asmVersion}")
+    api(libs.bundles.asm)
     
-    implementation('cpw.mods:securejarhandler:2.1.2')
-    implementation('org.apache.logging.log4j:log4j-api:2.17.1')
-    implementation('org.apache.logging.log4j:log4j-core:2.17.1')
-    implementation('net.sf.jopt-simple:jopt-simple:5.0.4')
-    compileOnly('org.jetbrains:annotations:23.0.0')
+    implementation(libs.securemodules)
+    implementation(libs.bundles.log4j.runtime)
+    implementation(libs.jopt.simple)
     
-    annotationProcessor('org.apache.logging.log4j:log4j-core:2.17.1')
+    compileOnly(libs.nulls)
     
-    testCompileOnly(sourceSets.testJars.output)
-    testCompileOnly('org.jetbrains:annotations:23.0.0')
-    testImplementation('org.junit.jupiter:junit-jupiter-api:5.8.+')
-    testImplementation('org.junit.jupiter:junit-jupiter-engine:5.8.+')
-    testImplementation('org.powermock:powermock-core:2.0.+')
-    testImplementation('org.powermock:powermock-reflect:2.0.+')
-    testRuntimeOnly('org.apiguardian:apiguardian-api:1.1.2')
-
-    jmhImplementation(sourceSets.main.output)
-    jmhImplementation(sourceSets.testJars.output)
-    jmhImplementation('org.openjdk.jmh:jmh-core:1.35')
-    jmhImplementation('org.powermock:powermock-core:2.0.9')
-    jmhAnnotationProcessor('org.openjdk.jmh:jmh-generator-annprocess:1.35')
+    annotationProcessor(libs.log4j.core)
 }
-
-configurations.jmhImplementation.extendsFrom(configurations.implementation)
 
 extraJavaModuleInfo {
     failOnMissingModuleInfo = false
-    
-    automaticModule('jmh-core-1.35.jar', 'jmh.core')
-    automaticModule('powermock-core-2.0.9.jar', 'powermock.core')
-    automaticModule('powermock-reflect-2.0.9.jar', 'powermock.reflect')
     automaticModule('jopt-simple-5.0.4.jar', 'jopt.simple')
 }
 
-task testsJar(type: Jar) {
-    archiveClassifier = 'testsjar'
-    from sourceSets.testJars.output
-}
-
-test {
-    dependsOn 'testsJar'
-    
-    useJUnitPlatform()
-    
-    systemProperty 'testJars.location', testsJar.archiveFile.get().asFile
-    
-    jvmArgs(
-            '--module-path', classpath.asPath,
-            '--add-modules', 'ALL-MODULE-PATH',
-            '--add-opens', 'cpw.mods.modlauncher/cpw.mods.modlauncher=powermock.reflect',
-            '--add-opens', 'java.base/java.lang=powermock.reflect',
-            '--add-opens', 'cpw.mods.securejarhandler/cpw.mods.cl=powermock.reflect',
-            '--add-opens', 'java.base/java.lang.invoke=cpw.mods.securejarhandler',
-            '--add-reads', 'cpw.mods.modlauncher=cpw.mods.modlauncher.test'
-    )
-}
-
-task jmh(type: JavaExec, dependsOn: jmhClasses) {
-    mainClass = 'org.openjdk.jmh.Main'
-
-    def results = file("${project.reportsDir}/jmh/result.json")
-    doFirst {
-        results.parentFile.mkdirs()
-        jvmArgs(
-                '--module-path', sourceSets.jmh.runtimeClasspath.asPath,
-                '--add-modules', 'ALL-MODULE-PATH',
-                '--add-opens', 'cpw.mods.modlauncher/cpw.mods.modlauncher=powermock.reflect',
-                '--add-opens', 'cpw.mods.modlauncher/cpw.mods.modlauncher=cpw.mods.modlauncher.benchmarks',
-                '--add-exports', 'cpw.mods.modlauncher.benchmarks/cpw.mods.modlauncher.benchmarks.jmh_generated=jmh.core'
-        )
-    }
-
-    args = [
-            'cpw.mods.modlauncher.benchmarks.TransformBenchmark',
-            '-bm', 'avgt',
-            '-prof', 'stack',
-            '-prof', 'jfr',
-            '-r', '3s',
-            '-w', '3s',
-            '-wi', '3',
-            '-i', '3',
-            '-f', '3',
-            '-tu', 'us',
-            '-rf', 'json',
-            '-rff', results
-    ]
+license {
+    header = file("LICENSE-header.txt")
 }
 
 jar {
     manifest {
-		attributes(['Specification-Title': 'modlauncher',
-			'Specification-Vendor': 'forge',
-			'Specification-Version': gradleutils.gitInfo.tag,
-			'Implementation-Title': project.name,
+		attributes([
+            'Specification-Title':    'modlauncher',
+			'Specification-Vendor':   'Forge Development LLC',
+			'Specification-Version':  gradleutils.gitInfo.tag,
+			'Implementation-Title':   project.name,
 			'Implementation-Version': project.version,
-			'Implementation-Vendor' :'forge'
+			'Implementation-Vendor':  'Forge Development LLC'
 		]  as LinkedHashMap, 'cpw/mods/modlauncher/api/')
 		
-		attributes(['Specification-Title': 'modlauncherserviceapi',
-			'Specification-Vendor': 'forge',
-			'Specification-Version': gradleutils.gitInfo.tag,
-			"Implementation-Title": project.name,
+		attributes([
+            'Specification-Title':    'modlauncherserviceapi',
+			'Specification-Vendor':   'Forge Development LLC',
+			'Specification-Version':  gradleutils.gitInfo.tag,
+			"Implementation-Title":   project.name,
 			'Implementation-Version': project.version,
-			'Implementation-Vendor' :'forge'
+			'Implementation-Vendor':  'Forge Development LLC'
 		]  as LinkedHashMap, 'cpw/mods/modlauncher/serviceapi/')
 	}
 }
@@ -154,17 +78,44 @@ compileJava {
 }
 
 publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
-            pom {
-                name = 'Mod Launcher'
-                description = 'Common ModLauncher framework'
-                url = 'https://github.com/MinecraftForge/modlauncher'
-			}
+    publications.register('mavenJava', MavenPublication) {
+        from components.java
+        artifactId = 'modlauncher'
+        pom {
+            name = 'Mod Launcher'
+            description = 'Common ModLauncher framework'
+            url = 'https://github.com/MinecraftForge/ModLauncher'
+            PomUtils.setGitHubDetails(pom, 'ModLauncher')
+            
+            license PomUtils.Licenses.LGPLv2_1
+            developers {
+                developer PomUtils.Developers.cpw
+                developer PomUtils.Developers.LexManos
+            }
         }
     }
     repositories {
-        maven gradleutils.getPublishingForgeMaven()
+        maven gradleutils.publishingForgeMaven
     }
+}
+
+// Hack eclipse into knowing that the gradle deps are modules
+eclipse.classpath {
+    containers 'org.eclipse.buildship.core.gradleclasspathcontainer'
+    file.whenMerged { entries.findAll { it.kind == 'lib' || it.path == 'org.eclipse.buildship.core.gradleclasspathcontainer' }.each { it.entryAttributes['module'] = 'true' } }
+}
+
+allprojects {
+    ext.VALID_VMS = [
+        'Adoptium':  [16, 17, 18, 19, 20, 21],
+        'Amazon':    [16, 17, 18, 19, 20, 21],
+        'Azul':      (16..21),
+        'BellSoft':  (16..21),
+        'Graal_VM':  [16, 17,     19, 20, 21],
+        'IBM':       [16, 17, 18, 19, 20    ],
+        'Microsoft': [16, 17,             21],
+        'Oracle':    (16..21),
+        'SAP':       (16..20)
+    ]
+    //ext.VALID_VMS = [ 'Adoptium':  [16] ]
 }
